# mcp-gen

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  test_client.py
.github/workflows/: ci.yml  release.yml
examples/: openapi.json
src/openapi_mcp_gen/: auth.py  cli.py  server.py
src/openapi_mcp_generator/: __init__.py  _version.py  cli.py  server.py
tests/: __init__.py  test_auth.py  test_cli.py  test_integration.py  test_openapi_spec_handler.py  test_server.py
